@@ -1,6 +1,7 @@
 2014-08-22
 	Fix HASH var crash
 	Fix HASH var handling of mixed types
+	Fix illegal UDS field variable names
 
 2014-08-15
 	Improved runtime performance
